form control updated

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <ul>
                   <li>
                     <label for="search-term">Search Term:</label>
-                    <input type="text" id="search-term" name="search-term" placeholder="Blac Chyna, Kansas City Royals, Quantum Computing, etc." required="required">
+                    <input type="text" class="form-control" id="search-term" name="search-term" placeholder="Blac Chyna, Kansas City Royals, Quantum Computing, etc." required="required">
                   </li>
                   <li>
                     <label for="records-to-retrieve">Number of Records to Retrieve:</label>
@@ -59,11 +59,11 @@
                   </li>
                   <li>
                     <label for="start-year">Start Year (optional)</label>
-                    <input type="number" id="start-year" name="start-year" required="optional">
+                    <input type="number" class="form-control" id="start-year" name="start-year" required="optional">
                   </li>
                   <li>
                     <label for="end-year">End Year (optional)</label>
-                    <input type="number" id="end-year" name="end-year" required="optional">
+                    <input type="number" class="form-control" id="end-year" name="end-year" required="optional">
                   </li>                  
                 </ul>
                 <input type="submit">
