--- a/index.html
+++ b/index.html
@@ -66,13 +66,12 @@
                     <input type="number" class="form-control" id="end-year" name="end-year" placeholder="yyyymmdd" required="optional">
                   </li>                  
                 </ul>               
-      
                 <div class="row">
                   <div class="col-lg-12">
-                    <div class="button">
-                      <input class="submit-parameters" id="submit-button" onClick="submitParameters()" type="submit" value="Submit" />
-                    </div>
-                    <button type="button" class="btn btn-default">
+                    <button type="button" class="btn btn-default" id="submit-button">
+                      <span class="glyphicon glyphicon-star" aria-hidden="true"></span> Submit
+                    </button>
+                    <button type="button" class="btn btn-default" id="clear-button">
                       <span class="glyphicon glyphicon-star" aria-hidden="true"></span> Clear
                     </button>                  
                   </div>
