drop down list now goes 1-10

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
     <!-- Bootstrap CDN -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="reset.css">
 
   </head>
 
@@ -25,19 +25,19 @@
         <div class="container">
           <div class="row vertical-center">
             <div class="col-lg-12">
-              <h1 class="main-title" id="main-title-1">New York Times Search</h1>
+              <h1 class="main-title" id="nyt-search-title">New York Times Search</h1>
             </div>
           </div>
         </div>
       </div>
 
       <!-- Panels are being used to hold various sections. -->
-      <!-- Question 1 -->
+      <!-- Search Parameters are here-->
       <div class="row">
         <div class="col-lg-12">    
           <div class="panel panel-default">
             <div class="panel-heading">
-              <!-- This h3 section will hold the question being asked -->
+              <!-- This h3 section will hold the panel description -->
               <h3 class="panel-title panel-description"><strong>Search Parameters</strong></h3>
             </div>
 
@@ -55,6 +55,12 @@
                       <option>2</option>
                       <option>3</option>
                       <option>4</option>
+                      <option>5</option>
+                      <option>6</option>
+                      <option>7</option>
+                      <option>8</option>
+                      <option>9</option>
+                      <option>10</option>                                              
                     </select>
                   </li>
                   <li>
