star glyphicons added in more spots

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <head>
 
     <meta charset="UTF-8">
-    <title>New York Times Search</title>
+    <title><span class="glyphicon glyphicon-star" aria-hidden="true"></span>New York Times Search</title>
 
     <!-- Bootstrap CDN -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -25,7 +25,7 @@
         <div class="container">
           <div class="row vertical-center">
             <div class="col-lg-12">
-              <h1 class="main-title" id="nyt-search-title">New York Times Search</h1>
+              <h1 class="main-title" id="nyt-search-title"><span class="glyphicon glyphicon-star" aria-hidden="true"></span>New York Times Search</h1>
             </div>
           </div>
         </div>
@@ -38,7 +38,7 @@
           <div class="panel panel-default">
             <div class="panel-heading">
               <!-- This h3 section will hold the panel description -->
-              <h3 class="panel-title panel-description"><strong>Search Parameters</strong></h3>
+              <h3 class="panel-title panel-description"><strong><span class="glyphicon glyphicon-star" aria-hidden="true"></span>Search Parameters</strong></h3>
             </div>
 
             <div class="panel-body search-field">
