--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
                     </select>
                   </li>
                   <li>
-                    <label for="start-year">Start Year (optional)</label>
-                    <input type="number" class="form-control" id="start-year" name="start-year" placeholder="yyyymmdd" required="optional">
+                    <label for="start-year">Start Year</label>
+                    <input type="number" class="form-control" id="start-year" name="start-year" placeholder="yyyymmdd" required="required">
                   </li>
                   <li>
-                    <label for="end-year">End Year (optional)</label>
-                    <input type="number" class="form-control" id="end-year" name="end-year" placeholder="yyyymmdd" required="optional">
+                    <label for="end-year">End Year</label>
+                    <input type="number" class="form-control" id="end-year" name="end-year" placeholder="yyyymmdd" required="required">
                   </li>                  
                 </ul>               
                 <div class="row">
@@ -87,6 +87,27 @@
           </div>
         </div>
       </div>
+
+      <!-- Results are here-->
+      <div class="row">
+        <div class="col-lg-12">    
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <!-- This h3 section will hold the panel description -->
+              <h3 class="panel-title panel-description"><strong><span class="glyphicon glyphicon-star" aria-hidden="true"></span>Top Articles</strong></h3>
+            </div>
+
+            <div class="panel-body articles-field">
+              <form id="articles-form">
+                <ul>
+                </ul>
+              </form>         
+            </div>
+          </div>
+        </div>
+      </div>
+
+
     </div>
   </div>
 
