list has no more bullets

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 
             <div class="panel-body search-field">
               <form id="search-form">
-                <ul>
+                <ul style="list-style-type:none">
                   <li>
                     <label for="search-term">Search Term:</label>
-                    <input type="text" class="form-control" id="search-term" name="search-term" placeholder="Blac Chyna, Kansas City Royals, Quantum Computing, etc." required="required">
+                    <input type="text" class="form-control" id="search-term" name="search-term" placeholder="Blac Chyna, Kansas City BBQ, Quantum Computing, etc." required="required">
                   </li>
                   <li>
                     <label for="records-to-retrieve">Number of Records to Retrieve:</label>
@@ -71,11 +71,11 @@
                     <label for="end-year">End Year</label>
                     <input type="number" class="form-control" id="end-year" name="end-year" placeholder="yyyymmdd" required="required">
                   </li>                  
-                </ul>               
+                </ul style="list-style-type:none">               
                 <div class="row">
                   <div class="col-lg-12">
                     <button type="button" class="btn btn-default" id="submit-button">
-                      <span class="glyphicon glyphicon-star" aria-hidden="true"></span> Submit
+                      <span class="glyphicon glyphicon-search" aria-hidden="true"></span> Submit
                     </button>
                     <button type="button" class="btn btn-default" id="clear-button">
                       <span class="glyphicon glyphicon-star" aria-hidden="true"></span> Clear
@@ -99,7 +99,7 @@
 
             <div class="panel-body articles-field">
               <form id="articles-form">
-                <ul>
+                <ul style="list-style-type:none">
                 </ul>
               </form>         
             </div>
