trash can added

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                       <span class="glyphicon glyphicon-search" aria-hidden="true"></span> Submit
                     </button>
                     <button type="button" class="btn btn-default" id="clear-button">
-                      <span class="glyphicon glyphicon-star" aria-hidden="true"></span> Clear
+                      <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Clear
                     </button>                  
                   </div>
                 </div>
